Sat Jan 27 15:22:03 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Thread_Mutex_Test.cpp (test):

	  Added code that tests mutex timeout functionality.

Sat Jan 27 15:16:33 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/POSIX_Proactor.h: Replace ACE_Thread_Mutex with ACE_SYNCH_MUTEX 
	  to avoid the need for conditional compilation.

	* ace/SUN_Proactor.h: Don't use ACE_Condition<ACE_Thread_Mutex>
	  but instead use the ACE_SYNCH_CONDITION, which also avoids the
 	  need to conditionally compile for threaded platforms.

Sat Jan 27 13:29:51 2001  Ossama Othman  <ossama@uci.edu>

	* ace/config-linux.h:

	  Declare the pthread_mutex_timedlock() prototype as an
	  'extern "C"' function.  This fixes an "unresolved symbol" link
	  error.

Sat Jan 27 10:39:28 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/nightlybuilds/builds.lst:
          Apparently the blank in 'RedHat 7.0' breaks the scoreboard.

Sat Jan 27 01:06:09 2001  Irfan Pyarali  <irfan@cs.wustl.edu>

        * include/makeinclude/platform_sunos5_sunc++.GNU: SPRO 5.0
          compiler should be able to support automatic template
          instantiation.  Also, standard C++ library should be ok.  -g was
          added to DCCFLAGS.

        * ace/config-sunos5.5.h: Turned off
          ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION,
          ACE_TEMPLATES_REQUIRE_SOURCE and ACE_USES_OLD_IOSTREAMS for the
          SPRO 5.0 compiler.

          Thanks to J. Russell Noseworthy <rnosewor@objectsciences.com>
          for contributing the above patches.

Sat Jan 27 00:37:26 2001  Irfan Pyarali  <irfan@cs.wustl.edu>

        * ace/OS.i:

          - (mutex_lock): Windows code must use relative time since that
          is what WaitForSingleObject() expects.  Also, fixed extra
          "return" before ACE_NOTSUP_RETURN.

          - (thread_mutex_lock): Made thread_mutex_lock() with timeout
          close to the thread_mutex_lock() without timeouts.
