@@ -1,3 +1,9 @@
+Sat Jan 27 19:34:20 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
+
+	* tests/Config_Test.{h,cpp}: Fixed the use of "bool," which is
+	  not supported on older compilers.  Thanks to Kitty for reporting
+ 	  this.
+
 Sat Jan 27 15:22:03 2001  Ossama Othman  <ossama@uci.edu>
 
 	* tests/Thread_Mutex_Test.cpp (test):
